# london-crime-data

./: README.md  pyproject.toml
.github/workflows/: refresh.yml
data/: business-crime-offences.parquet  business-crime-outcomes.parquet  custody.parquet  homicide.parquet  monthly-crime-dashboard.parquet  recorded-crime-borough-historical.parquet  recorded-crime-borough.parquet  recorded-crime-lsoa.parquet  recorded-crime-ward-historical.parquet  recorded-crime-ward.parquet  stolen-animals.parquet  thorough-searches.parquet  vawg-offences.parquet  vawg-victims.parquet
docs/: index.html
docs/data/: by_borough.json  by_category.json  knife_crime.json  meta.json  monthly_totals.json  sample_rows.json  stop_search_ethnicity.json
london_crime/: __init__.py  _fetch.py  _sources.py  load.py
notebooks/: README.md  explore_london_crime.ipynb
scripts/: build_site.py  discover.py  refresh.py
