[project]
name = "london-crime-data"
version = "0.1.0"
description = "MPS and London crime datasets as Parquet files, refreshed monthly"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
]

[dependency-groups]
dev = [
    "curl-cffi>=0.15.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["london_crime"]
